# medium-scraper-mcp

./: .eslintrc.json  .gitignore  LICENSE  README.md  jest.config.json  package-lock.json  package.json  pyproject.toml  test_medium_scraper.py  tsconfig.json
.github/: SETUP.md
.github/workflows/: ci.yml
medium_scraper_mcp/: __init__.py  cli.py  server.py
medium_scraper_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: release.sh
src/: cli.ts  index.ts  medium-scraper.ts  server.ts  types.ts
src/__tests__/: medium-scraper-mocked.test.ts  medium-scraper.test.ts  server.test.ts
src/__tests__/__mocks__/: axios.mock.ts
