[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medium-scraper-mcp"
version = "0.1.0"
description = "MCP server for searching and converting Medium articles to markdown"
authors = [{name = "Hong Kong Kiwi"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
    "mcp>=1.0.0",
    "lxml>=4.9.0",
    "aiohttp>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["medium_scraper_mcp*"]